# Contextual_rag

./: .env.example  .gitignore  README.md  contextual_rag.py  docker-compose.yaml  elasticsearch_bm25.py  main.py  pyproject.toml
Data/: contextualized_documents.csv  embeddings.pkl  test.csv
chromadb/: chroma.sqlite3
